--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Khebbab Mohamed's Website</title>
+    <title>Khebbab Mohamed - Developer</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600;700&family=Poppins:wght@300;400;600;700&display=swap');
         
         * {
             margin: 0;
@@ -14,8 +14,8 @@
         }
 
         body {
-            font-family: 'Press Start 2P', cursive;
-            background: linear-gradient(135deg, #1a1a2e 0%, #16213e 50%, #0f3460 100%);
+            font-family: 'Poppins', sans-serif;
+            background: linear-gradient(135deg, #0a0e27 0%, #1a1f3a 50%, #0f2847 100%);
             background-attachment: fixed;
             min-height: 100vh;
             display: flex;
@@ -25,7 +25,7 @@
             position: relative;
         }
 
-        /* Animated background pattern */
+        /* Enhanced scanline effect for retro aesthetic */
         body::before {
             content: '';
             position: fixed;
@@ -34,200 +34,211 @@
             width: 100%;
             height: 100%;
             background-image: 
-                repeating-linear-gradient(0deg, transparent, transparent 2px, rgba(0, 245, 255, 0.03) 2px, rgba(0, 245, 255, 0.03) 4px);
+                repeating-linear-gradient(0deg, transparent, transparent 2px, rgba(0, 245, 255, 0.02) 2px, rgba(0, 245, 255, 0.02) 4px);
             pointer-events: none;
             z-index: 1;
         }
 
-        /* Navigation Links - Top Left */
+        /* Improved navigation styling */
         nav {
             position: fixed;
-            top: 30px;
-            left: 30px;
+            top: 40px;
+            left: 40px;
             z-index: 20;
             display: flex;
             flex-direction: column;
-            gap: 12px;
+            gap: 10px;
         }
 
         nav a {
             display: inline-block;
-            padding: 10px 16px;
-            background: #ff006e;
+            padding: 12px 20px;
+            background: linear-gradient(135deg, #ff006e 0%, #ff1493 100%);
             color: #fff;
             text-decoration: none;
-            font-size: 10px;
-            border: 3px solid #00f5ff;
-            box-shadow: 4px 4px 0 rgba(0, 245, 255, 0.5), 8px 8px 0 rgba(255, 0, 110, 0.2);
-            transform: skewX(-5deg);
-            transition: all 0.2s ease;
+            font-size: 11px;
+            font-weight: 600;
+            font-family: 'JetBrains Mono', monospace;
+            border: 2px solid #00f5ff;
+            border-radius: 4px;
+            box-shadow: 0 8px 24px rgba(255, 0, 110, 0.2), 0 0 20px rgba(0, 245, 255, 0.15);
+            transform: translateZ(0);
+            transition: all 0.3s cubic-bezier(0.23, 1, 0.320, 1);
             position: relative;
             letter-spacing: 1px;
+            overflow: hidden;
+        }
+
+        nav a::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: rgba(255, 255, 255, 0.1);
+            transition: left 0.3s ease;
+            z-index: -1;
         }
 
         nav a:hover {
-            transform: skewX(-5deg) translateY(-3px);
-            box-shadow: 6px 6px 0 rgba(0, 245, 255, 0.8), 12px 12px 0 rgba(255, 0, 110, 0.3);
-            background: #ff1493;
+            transform: translateY(-3px);
+            box-shadow: 0 12px 32px rgba(255, 0, 110, 0.3), 0 0 30px rgba(0, 245, 255, 0.25);
+            border-color: #06ffa5;
         }
 
-        nav a:active {
-            transform: skewX(-5deg) translateY(0px);
+        nav a:hover::before {
+            left: 100%;
         }
 
-        /* Main Container */
+        /* Main container with improved centering */
         .container {
             flex: 1;
             display: flex;
             justify-content: center;
             align-items: center;
-            perspective: 1000px;
             position: relative;
             z-index: 5;
+            padding: 40px;
         }
 
-        /* 3D Text Effect */
-        .pixel-text {
+        /* Enhanced hero text styling */
+        .hero {
             text-align: center;
             position: relative;
-            filter: drop-shadow(0 0 30px rgba(0, 245, 255, 0.4));
+            max-width: 900px;
         }
 
-        .pixel-text h1 {
+        .hero h1 {
+            font-family: 'JetBrains Mono', monospace;
             color: #00f5ff;
-            font-size: 48px;
-            letter-spacing: 4px;
-            text-shadow: 
-                -3px -3px 0 #ff006e,
-                -6px -6px 0 #ffd60a,
-                -9px -9px 0 #06ffa5,
-                -12px -12px 0 #ff006e;
-            animation: float 3.5s ease-in-out infinite;
-            margin: 20px 0;
-            line-height: 1.4;
-            text-shadow: 
-                -2px -2px 0 #ff006e,
-                -4px -4px 0 #ffd60a,
-                -6px -6px 0 #06ffa5,
-                -8px -8px 0 #ff006e,
-                0 0 20px rgba(0, 245, 255, 0.5);
+            font-size: 64px;
+            font-weight: 700;
+            letter-spacing: 3px;
+            margin-bottom: 20px;
+            line-height: 1.2;
+            background: linear-gradient(180deg, #00f5ff 0%, #06ffa5 50%, #00f5ff 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            animation: shimmer 3s ease-in-out infinite;
+            text-shadow: 0 0 30px rgba(0, 245, 255, 0.3);
         }
 
-        .pixel-text p {
-            color: #06ffa5;
-            font-size: 14px;
-            margin-top: 30px;
-            text-shadow: 
-                -2px -2px 0 #ffd60a,
-                -4px -4px 0 #00f5ff;
-            animation: pulse 2s ease-in-out infinite;
+        .hero p {
+            font-family: 'Poppins', sans-serif;
+            color: #ffd60a;
+            font-size: 16px;
+            margin-top: 20px;
             letter-spacing: 2px;
+            animation: fadeInUp 0.8s ease-out 0.3s both;
+            font-weight: 300;
+        }
+
+        /* Decorative elements with improved animation */
+        .pixel-block {
+            position: fixed;
+            border: 2px solid;
+            border-radius: 2px;
+            animation: float 4s ease-in-out infinite;
+            z-index: 3;
+            backdrop-filter: blur(10px);
+        }
+
+        .block-1 {
+            width: 60px;
+            height: 60px;
+            top: 10%;
+            left: 8%;
+            background: rgba(255, 0, 110, 0.1);
+            border-color: #00f5ff;
+            animation-delay: 0s;
+            box-shadow: 0 0 20px rgba(255, 0, 110, 0.3), inset 0 0 20px rgba(0, 245, 255, 0.1);
+        }
+
+        .block-2 {
+            width: 70px;
+            height: 70px;
+            bottom: 12%;
+            right: 10%;
+            background: rgba(6, 255, 165, 0.1);
+            border-color: #ffd60a;
+            animation-delay: 0.5s;
+            box-shadow: 0 0 20px rgba(6, 255, 165, 0.3), inset 0 0 20px rgba(255, 214, 10, 0.1);
+        }
+
+        .block-3 {
+            width: 50px;
+            height: 50px;
+            top: 40%;
+            right: 8%;
+            background: rgba(255, 214, 10, 0.1);
+            border-color: #ff006e;
+            animation-delay: 1s;
+            box-shadow: 0 0 20px rgba(255, 214, 10, 0.3), inset 0 0 20px rgba(255, 0, 110, 0.1);
+        }
+
+        @keyframes shimmer {
+            0%, 100% {
+                text-shadow: 0 0 20px rgba(0, 245, 255, 0.3), 0 0 40px rgba(0, 245, 255, 0.1);
+            }
+            50% {
+                text-shadow: 0 0 30px rgba(0, 245, 255, 0.5), 0 0 60px rgba(0, 245, 255, 0.2);
+            }
+        }
+
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
 
         @keyframes float {
             0%, 100% {
-                transform: translateY(0px);
-            }
-            50% {
-                transform: translateY(-15px);
-            }
-        }
-
-        @keyframes pulse {
-            0%, 100% {
-                opacity: 1;
-            }
-            50% {
-                opacity: 0.6;
-            }
-        }
-
-        /* Pixel Decorations */
-        .pixel-block {
-            position: fixed;
-            border: 2px solid;
-            animation: bounce 3s ease-in-out infinite;
-            z-index: 3;
-        }
-
-        .block-1 {
-            width: 50px;
-            height: 50px;
-            top: 8%;
-            left: 5%;
-            background: #ff006e;
-            border-color: #00f5ff;
-            animation-delay: 0s;
-            box-shadow: 0 0 10px rgba(255, 0, 110, 0.6);
-        }
-
-        .block-2 {
-            width: 60px;
-            height: 60px;
-            bottom: 10%;
-            right: 8%;
-            background: #06ffa5;
-            border-color: #ffd60a;
-            animation-delay: 0.5s;
-            box-shadow: 0 0 10px rgba(6, 255, 165, 0.6);
-        }
-
-        .block-3 {
-            width: 45px;
-            height: 45px;
-            top: 30%;
-            right: 5%;
-            background: #ffd60a;
-            border-color: #ff006e;
-            animation-delay: 1s;
-            box-shadow: 0 0 10px rgba(255, 214, 10, 0.6);
-        }
-
-        .block-4 {
-            width: 55px;
-            height: 55px;
-            bottom: 25%;
-            left: 3%;
-            background: #00f5ff;
-            border-color: #06ffa5;
-            animation-delay: 1.5s;
-            box-shadow: 0 0 10px rgba(0, 245, 255, 0.6);
-        }
-
-        @keyframes bounce {
-            0%, 100% {
                 transform: translateY(0px) rotate(0deg);
             }
-            50% {
-                transform: translateY(-20px) rotate(5deg);
+            25% {
+                transform: translateY(-15px) rotate(2deg);
+            }
+            75% {
+                transform: translateY(15px) rotate(-2deg);
             }
         }
 
-        /* Responsive */
+        /* Responsive design improvements */
         @media (max-width: 768px) {
             nav {
-                top: 15px;
-                left: 15px;
+                top: 20px;
+                left: 20px;
                 gap: 8px;
             }
 
             nav a {
-                padding: 8px 12px;
-                font-size: 7px;
-                border: 2px solid #00f5ff;
-                box-shadow: 2px 2px 0 rgba(0, 245, 255, 0.5);
+                padding: 10px 16px;
+                font-size: 9px;
+                border-radius: 3px;
+                box-shadow: 0 4px 12px rgba(255, 0, 110, 0.15);
             }
 
-            .pixel-text h1 {
-                font-size: 28px;
+            .hero h1 {
+                font-size: 36px;
                 letter-spacing: 2px;
             }
 
-            .pixel-text p {
-                font-size: 10px;
+            .hero p {
+                font-size: 13px;
             }
 
-            .block-1, .block-2, .block-3, .block-4 {
+            .container {
+                padding: 20px;
+            }
+
+            .pixel-block {
                 display: none;
             }
         }
@@ -236,22 +247,22 @@
 <body>
     <!-- Navigation -->
     <nav>
+        <a href="index.html">HOME</a>
         <a href="bio.html">BIO</a>
         <a href="aboutme.html">ABOUT ME</a>
         <a href="career.html">CAREER</a>
     </nav>
 
-    <!-- Pixel Decorations -->
+    <!-- Decorative Elements -->
     <div class="pixel-block block-1"></div>
     <div class="pixel-block block-2"></div>
     <div class="pixel-block block-3"></div>
-    <div class="pixel-block block-4"></div>
 
     <!-- Main Content -->
     <div class="container">
-        <div class="pixel-text">
+        <div class="hero">
             <h1>HI IT'S KHEBBAB MOHAMED'S WEBSITE</h1>
-            <p>★ 8-BIT ADVENTURE AWAITS ★</p>
+            <p>Creative Developer • Tech Enthusiast • Problem Solver</p>
         </div>
     </div>
 </body>
