--- a/aboutme.html
+++ b/aboutme.html
@@ -201,6 +201,7 @@
         <a href="bio.html">BIO</a>
         <a href="aboutme.html" class="active">ABOUT ME</a>
         <a href="career.html">CAREER</a>
+        <a href="contact.html">CONTACT</a>
     </nav>
 
     <div class="container">
