--- a/career.html
+++ b/career.html
@@ -215,6 +215,7 @@
         <a href="bio.html">BIO</a>
         <a href="aboutme.html">ABOUT ME</a>
         <a href="career.html" class="active">CAREER</a>
+        <a href="contact.html">CONTACT</a>
     </nav>
 
     <div class="container">
