--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
         <a href="bio.html">BIO</a>
         <a href="aboutme.html">ABOUT ME</a>
         <a href="career.html">CAREER</a>
+        <a href="contact.html">CONTACT</a>
     </nav>
 
     <!-- Decorative Elements -->
