--- a/career.html
+++ b/career.html
@@ -180,12 +180,30 @@
 
         @media (max-width: 768px) {
             nav {
-                top: 20px;
-                left: 20px;
+                position: fixed;
+                top: auto;
+                bottom: 20px;
+                left: 50%;
+                transform: translateX(-50%);
+                flex-direction: row;
+                gap: 6px;
+                background: rgba(10, 14, 39, 0.95);
+                padding: 10px;
+                border-radius: 8px;
+                border: 2px solid #00f5ff;
+                box-shadow: 0 -4px 20px rgba(0, 245, 255, 0.2);
+                backdrop-filter: blur(10px);
+            }
+
+            nav a {
+                padding: 8px 12px;
+                font-size: 8px;
+                border-radius: 3px;
+                box-shadow: 0 4px 12px rgba(255, 0, 110, 0.15);
             }
 
             .container {
-                padding: 80px 20px 40px;
+                padding: 40px 20px 120px;
             }
 
             .content {
