--- a/aboutme.html
+++ b/aboutme.html
@@ -220,6 +220,7 @@
         <a href="aboutme.html" class="active">ABOUT ME</a>
         <a href="career.html">CAREER</a>
         <a href="contact.html">CONTACT</a>
+        <a href="forum.html">FORUM</a>
     </nav>
 
     <div class="container">
