--- a/career.html
+++ b/career.html
@@ -234,6 +234,7 @@
         <a href="aboutme.html">ABOUT ME</a>
         <a href="career.html" class="active">CAREER</a>
         <a href="contact.html">CONTACT</a>
+        <a href="forum.html">FORUM</a>
     </nav>
 
     <div class="container">
