--- a/contact.html
+++ b/contact.html
@@ -323,6 +323,7 @@
         <a href="aboutme.html">ABOUT ME</a>
         <a href="career.html">CAREER</a>
         <a href="contact.html" class="active">CONTACT</a>
+        <a href="forum.html">FORUM</a>
     </nav>
 
     <div class="container">
