--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
         <a href="aboutme.html">ABOUT ME</a>
         <a href="career.html">CAREER</a>
         <a href="contact.html">CONTACT</a>
+        <a href="forum.html">FORUM</a>
     </nav>
 
     <!-- Decorative Elements -->
