--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
     <!-- Main Content -->
     <div class="container">
         <div class="hero">
-            <h1>HI IT'S KHEBBAB MOHAMED'S WEBSITE</h1>
+            <h1>KHEBBAB MOHAMED'S<br>WEBSITE</h1>
             <p>Creative Developer • Tech Enthusiast • Problem Solver</p>
         </div>
     </div>
