--- a/aboutme.html
+++ b/aboutme.html
@@ -218,7 +218,7 @@
         <a href="index.html">HOME</a>
         <a href="bio.html">BIO</a>
         <a href="aboutme.html" class="active">ABOUT ME</a>
-        <a href="career.html">CAREER</a>
+        <a href="cv.html">CV</a>
         <a href="contact.html">CONTACT</a>
         <a href="forum.html">FORUM</a>
     </nav>
