--- a/contact.html
+++ b/contact.html
@@ -321,7 +321,7 @@
         <a href="index.html">HOME</a>
         <a href="bio.html">BIO</a>
         <a href="aboutme.html">ABOUT ME</a>
-        <a href="career.html">CAREER</a>
+        <a href="cv.html">CV</a>
         <a href="contact.html" class="active">CONTACT</a>
         <a href="forum.html">FORUM</a>
     </nav>
