--- a/cv.html
+++ b/cv.html
@@ -232,7 +232,7 @@
         <a href="index.html">HOME</a>
         <a href="bio.html">BIO</a>
         <a href="aboutme.html">ABOUT ME</a>
-        <a href="career.html" class="active">CAREER</a>
+        <a href="cv.html" class="active">CV</a>
         <a href="contact.html">CONTACT</a>
         <a href="forum.html">FORUM</a>
     </nav>
